# py-wikipls

./: README.md  article.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: publish.yml  python-publish.yml  test-publish.yml
src/py_wikipls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/wikipls/: __init__.py  article.py  consts.py  get_func.py  type_obj.py  util_classes.py  util_func.py  utils.py  wiki_classes.py  wiki_obj.py
src/wikipy_python/: article.py  utils.py
tests/: class_memory_test.py  image_download_test.py  print_details.py  test1.py
wikipls/: consts.py  get_func.py  util_func.py  wiki_classes.py
